<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/equalsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="283dp"
        android:text="@string/equals"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/divisionButton"
        app:layout_constraintStart_toEndOf="@+id/n0"
        app:layout_constraintTop_toBottomOf="@+id/n3" />

    <Button
        android:id="@+id/divisionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginBottom="283dp"
        android:text="@string/Division"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/equalsButton"
        app:layout_constraintTop_toBottomOf="@+id/multiplicationButton" />

    <Button
        android:id="@+id/n0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="283dp"
        android:text="@string/nZero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/equalsButton"
        app:layout_constraintStart_toEndOf="@+id/clearButton"
        app:layout_constraintTop_toBottomOf="@+id/n2" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginBottom="283dp"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/n0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/n1" />

    <Button
        android:id="@+id/n3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nThree"
        app:layout_constraintBottom_toTopOf="@+id/equalsButton"
        app:layout_constraintEnd_toStartOf="@+id/multiplicationButton"
        app:layout_constraintStart_toEndOf="@+id/n2"
        app:layout_constraintTop_toBottomOf="@+id/n6" />

    <Button
        android:id="@+id/multiplicationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:text="@string/multiply"
        app:layout_constraintBottom_toTopOf="@+id/divisionButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/n3"
        app:layout_constraintTop_toBottomOf="@+id/minusButton" />

    <Button
        android:id="@+id/n1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:text="@string/nOne"
        app:layout_constraintBottom_toTopOf="@+id/clearButton"
        app:layout_constraintEnd_toStartOf="@+id/n2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/n2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nTwo"
        app:layout_constraintBottom_toTopOf="@+id/n0"
        app:layout_constraintEnd_toStartOf="@+id/n3"
        app:layout_constraintStart_toEndOf="@+id/n1"
        app:layout_constraintTop_toBottomOf="@+id/n5" />

    <Button
        android:id="@+id/n9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/nNine"
        app:layout_constraintBottom_toTopOf="@+id/n6"
        app:layout_constraintEnd_toStartOf="@+id/plusButton"
        app:layout_constraintStart_toEndOf="@+id/n8"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/plusButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:text="@string/plus"
        app:layout_constraintBottom_toTopOf="@+id/minusButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/n9"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/n7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="56dp"
        android:text="@string/nSeven"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/n8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/n8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/nEight"
        app:layout_constraintBottom_toTopOf="@+id/n5"
        app:layout_constraintEnd_toStartOf="@+id/n9"
        app:layout_constraintStart_toEndOf="@+id/n7"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/n5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nFive"
        app:layout_constraintBottom_toTopOf="@+id/n2"
        app:layout_constraintEnd_toStartOf="@+id/n6"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/n8" />

    <Button
        android:id="@+id/n6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nSix"
        app:layout_constraintBottom_toTopOf="@+id/n3"
        app:layout_constraintEnd_toStartOf="@+id/minusButton"
        app:layout_constraintStart_toEndOf="@+id/n5"
        app:layout_constraintTop_toBottomOf="@+id/n9" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:text="@string/nFour"
        app:layout_constraintBottom_toTopOf="@+id/n1"
        app:layout_constraintEnd_toStartOf="@+id/n5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/n7" />

    <Button
        android:id="@+id/minusButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:text="@string/minus"
        app:layout_constraintBottom_toTopOf="@+id/multiplicationButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/n6"
        app:layout_constraintTop_toBottomOf="@+id/plusButton" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="225dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="149dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/view"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>